--- a/FrontEnd/blog.html
+++ b/FrontEnd/blog.html
@@ -88,7 +88,7 @@
                         <a href="services.html" class="nav-item nav-link">Infografis</a>
                         <a href="packages.html" class="nav-item nav-link">Maps</a>
                         <a href="blog.html" class="nav-item nav-link">Blog</a>
-                        <div class="nav-item dropdown">
+                        <!-- <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu m-0">
                                 <a href="destination.html" class="dropdown-item">Destination</a>
@@ -103,7 +103,7 @@
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
                     </div>
                     <a href="" class="btn btn-primary rounded-pill py-2 px-4 ms-lg-4">Book Now</a>
-                </div>
+                </div> -->
             </nav>
         </div>
         <!-- Navbar & Hero End -->
