--- a/FrontEnd/packages.html
+++ b/FrontEnd/packages.html
@@ -85,7 +85,7 @@
                     <div class="navbar-nav ms-auto py-0">
                         <a href="index.html" class="nav-item nav-link active">Home</a>
                         <a href="about.html" class="nav-item nav-link">Tentang Kami</a>
-                        <a href="services.html" class="nav-item nav-link">Infografis</a>
+                        <a href="infografis.html" class="nav-item nav-link">Infografis</a>
                         <a href="packages.html" class="nav-item nav-link">Maps</a>
                         <a href="blog.html" class="nav-item nav-link">Blog</a>
                         <!-- <div class="nav-item dropdown">
