--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -68,7 +68,7 @@
                         <a href="about.html" class="nav-item nav-link">Tentang Kami</a>
                         <a href="infografis.html" class="nav-item nav-link">Infografis</a>
                         <a href="maps.html" class="nav-item nav-link">Maps</a>
-                        <a href="blog.html" class="nav-item nav-link">Berita</a>
+                        <a href="berita.html" class="nav-item nav-link">Berita</a>
                     </div>
             </nav>
 
